# lca

./: .hlint.yaml  .travis.yml  CHANGELOG.md  Data-LCA-Online-Monoidal.html  Data-LCA-Online-Naive.html  Data-LCA-Online.html  Data-LCA-View.html  README.md  cabal.haskell-ci  doc-index.html  index-frames.html  index.html  lca.cabal  lca.haddock  mini_Data-LCA-Online-Monoidal.html  mini_Data-LCA-Online-Naive.html  mini_Data-LCA-Online.html  mini_Data-LCA-View.html
.github/workflows/: haskell-ci.yml
Data/LCA/: Online.hs
Data/LCA/Online/: Naive.hs
src/: Data-LCA-Online-Monoidal.html  Data-LCA-Online-Naive.html  Data-LCA-Online.html  Data-LCA-View.html
src/Data/: LSCA.hs
src/Data/LCA/: Online.hs  View.hs
src/Data/LCA/Online/: Monoidal.hs  Naive.hs
tests/: doctests.hs
